Migrate to Postgres, Refactor with dependency injection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DatabaseUrl": "Server=localhost;Port=5432;Database=dotnet"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
